Opened 11 years ago

Closed 11 years ago

Last modified 11 years ago

#10302 closed bug (fixed)

46523_x86_64 Deskbar Crash on Boot

Reported by: vidrep Owned by: anevilyak
Priority: normal Milestone: R1
Component: Kits/Media Kit Version: R1/Development
Keywords: Cc:
Blocked By: Blocking: #10187
Platform: x86-64

Description

46523_x86_64 CD image install: Deskbar crashes after booting, and will continue crashing every time it is restarted. Intermittently, when selecting "save debug report", mouse loses select function. Can be restored with keyboard "alt, ctrl,del", select "kill debugger". Mouse select returns, and blank debug report appears on desktop.

Change History (27)

by vidrep, 11 years ago

Attachment: syslog added

comment:1 by anevilyak, 11 years ago

Component: - GeneralKits/Locale Kit
Owner: changed from nobody to pulkomandy

Did that behavior start with a particular revision?

comment:2 by anevilyak, 11 years ago

Platform: Allx86-64

comment:3 by vidrep, 11 years ago

It started with 46523.

comment:4 by vidrep, 11 years ago

Only 46523_x86_64 is exhibiting this behaviour.

comment:5 by pulkomandy, 11 years ago

Could you try running it with libroot_debug?

comment:6 by vidrep, 11 years ago

Opening a terminal and entering "LD_PRELOAD=libroot_debug.so Deskbar" brings up the Deskbar Preferences, and then it crashes.

comment:7 by diver, 11 years ago

The last crash might be related to hrev46520.

comment:8 by anevilyak, 11 years ago

Component: Kits/Locale KitKits/Media Kit
Owner: changed from pulkomandy to siarzhuk
Status: newassigned

Indeed. As a corroborating point, quitting media_server and then attempting to start Deskbar allows the latter to successfully launch here.

comment:9 by siarzhuk, 11 years ago

Could you, please recheck with hrev46516 nightly the following:

  • move the mouse pointer above the replicant to let the notify tooltip be shown;
  • try to change volume with the mouse wheel;
  • is volume control from the replicant popup menu functional?

Thanks.

comment:10 by vidrep, 11 years ago

I installed 46516_x86_64 anyboot image. When the mouse pointer is moved above the volume control replicant the deskbar crashes and a debug dialog comes up before any pop-up menu appears.Debug report attached.

comment:11 by siarzhuk, 11 years ago

Hm... Deskbar-478-debug-13-12-2013-06-51-59.report​ is looking like binary format. :-\ Is something wrong with it?

Looks like the problem has existed before hrev46520. The hrev46520 just introduced polling of media server for state of mixer mute control. The replicant's view Pulse() call uses the MixerControl in the same way as in tooltip hover implementation. The issue at boot can be workarounded by disabling pool at start - but replicant hover will obviously crash the Deskbar.

comment:12 by vidrep, 11 years ago

Usually the debug report is a 0 byte file when the deskbar crashes and a report is created. Deskbar-478-debug-13-12-2013-06-51-59 report that I attached is a copy. I'll send the original from my Haiku PC when I go home tonight. It was in readable form on my Alpha 4.1 partition.

in reply to:  11 comment:13 by anevilyak, 11 years ago

Replying to siarzhuk:

Looks like the problem has existed before hrev46520. The hrev46520 just introduced polling of media server for state of mixer mute control. The replicant's view Pulse() call uses the MixerControl in the same way as in tooltip hover implementation. The issue at boot can be workarounded by disabling pool at start - but replicant hover will obviously crash the Deskbar.

Interesting that whatever goes wrong only does so if it's actually able to attempt to poll though. As stated, with media_server shut down, it doesn't crash, though one sees the constant polling attempts on the console. It should further be noted that the crash only actually occurs after some messages on the terminal about being unable to instantiate a parameter web (I unfortunately don't have access to that computer for a few more hours, and can't recall the exact message right now).

comment:14 by anevilyak, 11 years ago

Owner: changed from siarzhuk to anevilyak
Status: assignedin-progress

comment:15 by anevilyak, 11 years ago

Resolution: fixed
Status: in-progressclosed

Crash fixed in hrev46536. The question of why unflattening the parameter web in question fails still remains though, as it does in fact get a response back from the media_server with flattened data. My knowledge of the media kit is limited though, so I'll leave that to someone more knowledgable.

comment:16 by vidrep, 11 years ago

Attached debug report to replace earlier corrupted file.

comment:17 by axeld, 11 years ago

It could be just a long vs. int32 issue, or something similar. Maybe even some pointer arithmetic. In any case, it deserves its own ticket.

comment:18 by vidrep, 11 years ago

Resolution: fixed
Status: closedreopened

Installed 46537_x86_64. When mouse pointer is above volume control replicant, tooltip is shown, but no function when using mouse wheel to change volume. It does work on 46537_gcc2 nightly. When shutdown "restart system" it gets to media server and crashes deskbar. Save report from debug dialog. Restart deskbar and 0 byte debug report appears on desktop.

by vidrep, 11 years ago

Attachment: syslog.2 added

comment:19 by anevilyak, 11 years ago

Resolution: fixed
Status: reopenedclosed

Please file a new ticket for that, as it's a different problem from the one this ticket was filed for.

comment:20 by diver, 11 years ago

Blocking: 10187 added
Note: See TracTickets for help on using tickets.